--- a/professional-laptop.html
+++ b/professional-laptop.html
@@ -19,7 +19,7 @@
 <body>
   <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>Avni Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -56,9 +56,9 @@
   <section class="product-gallery-grid">
     <h3>More Angles</h3>
     <div class="gallery-images">
-      <img src="img/pro1.jpg" alt="Professional Laptop Display" />
-      <img src="img/pro2.jpg" alt="Professional Laptop Side" />
-      <img src="img/pro3.jpg" alt="Professional Laptop Office Use" />
+      <img src="pro1.jpg" alt="Professional Laptop Display" />
+      <img src="pro2.jpg" alt="Professional Laptop Side" />
+      <img src="pro3.jpg" alt="Professional Laptop Office Use" />
     </div>
   </section>
   
