--- a/gaming-pc.html
+++ b/gaming-pc.html
@@ -20,7 +20,7 @@
 <body>
   <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>Avni Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -59,9 +59,9 @@
   <section class="product-gallery-grid">
     <h3>Gaming Setup Gallery</h3>
     <div class="gallery-images">
-      <img src="img/gaming1.jpg" alt="Gaming PC RGB Lights" />
-      <img src="img/gaming2.jpg" alt="Gaming PC Setup" />
-      <img src="img/gaming3.jpg" alt="Gaming PC Closeup" />
+      <img src="gaming1.jpg" alt="Gaming PC RGB Lights" />
+      <img src="gaming2.jpg" alt="Gaming PC Setup" />
+      <img src="gaming3.jpg" alt="Gaming PC Closeup" />
     </div>
   </section>
 
