--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us | Avni Laptop Solutions</title>
+  <title>About Us | Laptop Solutions</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -21,8 +21,7 @@
   <header class="main-header">
     <div class="logo-container">
       <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
-      <h1>Avni Laptop Solutions</h1>
-    </div>
+      <h1>laptop solution </h1>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <nav class="nav-links" id="nav-links">
       <a href="index.html">Home</a>
@@ -44,18 +43,15 @@
   <section class="about-content">
     <div class="about-wrapper">
       <h3>Who We Are</h3>
-      <p><strong>Avni Laptop Solutions</strong> is a trusted name in the tech market of Nehru Place, New Delhi, with two active stores and a strong online presence. Founded by <strong>Ravi Kumar</strong>, a passionate tech enthusiast, our goal is to provide top-quality laptops, desktops, and custom-built gaming PCs at affordable prices.</p>
+      <p><strong>Laptop Solutions</strong> is a trusted name in the tech market of Nehru Place, New Delhi, with two active stores and a strong online presence. Founded by <strong>Om Kumar</strong>, a passionate tech enthusiast, our goal is to provide top-quality laptops, desktops, and custom-built gaming PCs at affordable prices.</p>
 
       <h3>Where You Can Find Us</h3>
-      <p>📍 Store Address: <strong>G-5, Ocean Building, Nehru Place, New Delhi</strong></p>
-      <p>📧 Email: <a href="mailto:avnilaptopgamingpc@gmail.com">avnilaptopgamingpc@gmail.com</a></p>
+      <p>📍 Store Address: <strong> Nehru Place, New Delhi</strong></p>
+      <p>📧 Email: <a href="mailto:laptopgamingpc@gmail.com">laptopgamingpc@gmail.com</a></p>
       <p>📞 Instagram: 
-        <a href="https://instagram.com/raviprajapati07" target="_blank">@raviprajapati07</a> |
-        <a href="https://instagram.com/avni_laptop_solutionsss" target="_blank">@avni_laptop_solutionsss</a> |
-        <a href="https://instagram.com/avni_gaming_pc" target="_blank">@avni_gaming_pc</a> |
-        <a href="https://instagram.com/avni_laptop_delhi" target="_blank">@avni_laptop_delhi</a>
-      </p>
-      <p>▶️ YouTube: <a href="https://www.youtube.com/@AvniLaptopSolutions" target="_blank">Avni Laptop Solutions</a></p>
+       
+        <a href="https://instagram.com/laptop_solutionsss" target="_blank">@laptop_solutionsss</a></p>
+      <p>▶️ YouTube: <a href="https://www.youtube.com/" target="_blank">Avni Laptop Solutions</a></p>
 
       <h3>Our Products</h3>
       <ul>
@@ -75,10 +71,10 @@
   </section>
 
   <footer class="main-footer">
-    <p>&copy; 2025 Avni Laptop Solutions | G-5 Ocean Building, Nehru Place, New Delhi</p>
+    <p>&copy; 2025 Laptop Solutions |Nehru Place, New Delhi</p>
     <p>Follow us: 
-      <a href="https://instagram.com/raviprajapati07" target="_blank">Instagram</a> | 
-      <a href="https://www.youtube.com/@AvniLaptopSolutions" target="_blank">YouTube</a>
+      <a href="https://instagram.com/" target="_blank">Instagram</a> | 
+      <a href="https://www.youtube.com/" target="_blank">YouTube</a>
     </p>
   </footer>
 
