--- a/budget-laptop.html
+++ b/budget-laptop.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Budget Laptop | Avni Laptop Solutions</title>
+  <title>Budget Laptop | Laptop Solutions</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -19,7 +19,7 @@
 <body>
   <header class="main-header">
     <div class="logo-container">
-      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>Avni Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -58,16 +58,16 @@
  <section class="product-gallery-grid">
    <h3>More Views</h3>
    <div class="gallery-images">
-     <img src="budget1.avif" alt="Budget Laptop Side View" />
-     <img src="budget2.avif" alt="Budget Laptop Open View" />
-     <img src="budget3.avif" alt="Budget Laptop Keyboard" />
+     <img src="img/budget1.avif" alt="Budget Laptop Side View" />
+     <img src="img/budget2.avif" alt="Budget Laptop Open View" />
+     <img src="img/budget3.avif" alt="Budget Laptop Keyboard" />
     </div>
  </section>
 
   <section class="contact-form-section">
     <h2>Interested in this Product?</h2>
     <p>Fill out the form and we'll get back to you soon!</p>
-    <form action="mailto:avnilaptopgamingpc@gmail.com" method="POST" enctype="text/plain">
+    <form action="mailto:laptopgamingpc@gmail.com" method="POST" enctype="text/plain">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" placeholder="Your Message or Product Query..." rows="4" required></textarea>
@@ -76,10 +76,10 @@
   </section>
 
   <footer class="main-footer">
-    <p>&copy; 2025 Avni Laptop Solutions | G-5 Ocean Building, Nehru Place, New Delhi</p>
+    <p>&copy; 2025 Laptop Solutions |  Nehru Place, New Delhi</p>
     <p>Follow us: 
-      <a href="https://instagram.com/raviprajapati07" target="_blank">Instagram</a> | 
-      <a href="https://www.youtube.com/@AvniLaptopSolutions" target="_blank">YouTube</a>
+      <a href="https://instagram.com/" target="_blank">Instagram</a> | 
+      <a href="https://www.youtube.com/" target="_blank">YouTube</a>
     </p>
   </footer>
 
