--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us | Avni Laptop Solutions</title>
+  <title>Contact Us | Laptop Solutions</title>
   <link rel="stylesheet" href="style.css" />
 </head>
   <script>
@@ -19,8 +19,8 @@
 
   <header class="main-header">
     <div class="logo-container">
-      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
-      <h1>Avni Laptop Solutions</h1>
+      <img src="img/logo.jpg" alt=" Logo" class="site-logo">
+      <h1>Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <nav class="nav-links" id="nav-links">
@@ -42,12 +42,12 @@
 
   <section class="contact-details">
     <div class="map-container">
-      <iframe src="https://www.google.com/maps?q=G-5%2C+Ocean+Building%2C+Nehru+Place%2C+New+Delhi&output=embed" width="100%" height="300" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.1084218253443!2d77.2501893!3d28.5503314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3c59105a87f%3A0x5adea99505f21b93!2sNehru%20Place%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1727711111111!5m2!1sen!2sin=embed" width="100%" height="300" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
     <div class="form-container">
       <h3>Send us a message</h3>
-      <form action="mailto:avnilaptopgamingpc@gmail.com" method="POST" enctype="text/plain">
+      <form action="mailto:laptopgamingpc@gmail.com" method="POST" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
         <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
@@ -58,10 +58,10 @@
 
   <!-- FOOTER -->
   <footer class="main-footer">
-    <p>&copy; 2025 Avni Laptop Solutions | G-5 Ocean Building, Nehru Place, New Delhi</p>
+    <p>&copy; 2025 Laptop Solutions | Nehru Place, New Delhi</p>
     <p>Follow us: 
-      <a href="https://instagram.com/raviprajapati07" target="_blank">Instagram</a> | 
-      <a href="https://www.youtube.com/@AvniLaptopSolutions" target="_blank">YouTube</a>
+      <a href="https://instagram.com/" target="_blank">Instagram</a> | 
+      <a href="https://www.youtube.com/" target="_blank">YouTube</a>
     </p>
   </footer>
 
