--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avni Laptop Solutions</title>
+  <title>Laptop Solutions</title>
+  <link rel="icon" type="logo.jpg" href="img/logo.jpg">
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
@@ -21,8 +22,8 @@
 <body>
  <header class="main-header">
     <div class="logo-container">
-      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
-      <h1>Avni Laptop Solutions</h1>
+      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <h1>Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <nav class="nav-links" id="nav-links">
@@ -45,19 +46,19 @@
     <h2>Featured Products</h2>
     <div class="product-gallery">
       <div class="product-card">
-        <img src="laptop1.png" alt="Budget Laptop">
+        <img src="img/laptop1.png" alt="Budget Laptop">
         <h3>Budget Laptop</h3>
         <p>Perfect for students and office work. Reliable & affordable.</p>
         <button onclick="location.href='budget-laptop.html'">View Details</button>
       </div>
       <div class="product-card">
-        <img src="gamingpc.jpg" alt="Gaming PC">
+        <img src="img/gamingpc.jpg" alt="Gaming PC">
         <h3>Gaming PC</h3>
         <p>High performance gaming rigs. Custom-built for gamers.</p>
        <button onclick="location.href='gaming-pc.html'">View Details</button>
       </div>
       <div class="product-card">
-        <img src="laptop2.png" alt="Professional Laptop">
+        <img src="img/laptop2.png" alt="Professional Laptop">
         <h3>Professional Laptop</h3>
         <p>High-speed laptops for designers, coders & business pros.</p>
         <button onclick="location.href='professional-laptop.html'">View Details</button>
@@ -67,25 +68,25 @@
 
   <section class="map-section">
     <h2>Visit Us</h2>
-    <p>G-5, Ocean Building, Nehru Place, New Delhi</p>
+    <p> Nehru Place, New Delhi</p>
     <iframe 
-      src="https://www.google.com/maps?q=G-5%20Ocean%20Building%20Nehru%20Place%20New%20Delhi&output=embed"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.1084218253443!2d77.2501893!3d28.5503314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3c59105a87f%3A0x5adea99505f21b93!2sNehru%20Place%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1727711111111!5m2!1sen!2sin"
       width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
     </iframe>
   </section>
 
   <footer>
     <div class="contact">
-      <p>📧 Email: <a href="mailto:avnilaptopgamingpc@gmail.com">avnilaptopgamingpc@gmail.com</a></p>
-      <p>📞 Owner: Ravi Kumar | Instagram: <a href="https://instagram.com/raviprajapati07" target="_blank">@raviprajapati07</a></p>
+      <p>📧 Email: <a href="mailto:laptopgamingpc@gmail.com">laptopgamingpc@gmail.com</a></p>
+      <p>📞 Owner: Om Kumar 
       <p>📱 Other Insta IDs: 
-        <a href="https://instagram.com/avni_laptop_solutionsss" target="_blank">avni_laptop_solutionsss</a>,
-        <a href="https://instagram.com/avni_gaming_pc" target="_blank">avni_gaming_pc</a>,
-        <a href="https://instagram.com/avni_laptop_delhi" target="_blank">avni_laptop_delhi</a>
+        <a href="https://instagram.com/laptop_solutionsss" target="_blank">laptop_solutionsss</a>,
+        <a href="https://instagram.com/gaming_pc" target="_blank">gaming_pc</a>,
+        <a href="https://instagram.com/laptop_delhi" target="_blank">laptop_delhi</a>
       </p>
-      <p>📺 YouTube: <a href="https://www.youtube.com/results?search_query=Avni+Laptop+Solutions" target="_blank">Avni Laptop Solutions</a></p>
+      <p>📺 YouTube: <a href="https://www.youtube.com/results?search_query=" target="_blank">youtube</a></p>
     </div>
-    <p class="copyright">© 2025 Avni Laptop Solutions. All rights reserved.</p>
+    <p class="copyright">© 2025 Laptop Solutions. All rights reserved.</p>
   </footer>
 </body>
 </html>
