--- a/budget-laptop.html
+++ b/budget-laptop.html
@@ -19,7 +19,7 @@
 <body>
   <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>Avni Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -58,9 +58,9 @@
  <section class="product-gallery-grid">
    <h3>More Views</h3>
    <div class="gallery-images">
-     <img src="img/budget1.avif" alt="Budget Laptop Side View" />
-     <img src="img/budget2.avif" alt="Budget Laptop Open View" />
-     <img src="img/budget3.avif" alt="Budget Laptop Keyboard" />
+     <img src="budget1.avif" alt="Budget Laptop Side View" />
+     <img src="budget2.avif" alt="Budget Laptop Open View" />
+     <img src="budget3.avif" alt="Budget Laptop Keyboard" />
     </div>
  </section>
 
@@ -85,3 +85,4 @@
 
 </body>
 </html>
+
