--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
   <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>laptop solution </h1>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <nav class="nav-links" id="nav-links">
@@ -80,3 +80,4 @@
 
 </body>
 </html>
+
