--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
   <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt=" Logo" class="site-logo">
+      <img src="logo.jpg" alt=" Logo" class="site-logo">
       <h1>Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -68,3 +68,4 @@
 
 </body>
 </html>
+
