--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
  <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -46,19 +46,19 @@
     <h2>Featured Products</h2>
     <div class="product-gallery">
       <div class="product-card">
-        <img src="img/laptop1.png" alt="Budget Laptop">
+        <img src="laptop1.png" alt="Budget Laptop">
         <h3>Budget Laptop</h3>
         <p>Perfect for students and office work. Reliable & affordable.</p>
         <button onclick="location.href='budget-laptop.html'">View Details</button>
       </div>
       <div class="product-card">
-        <img src="img/gamingpc.jpg" alt="Gaming PC">
+        <img src="gamingpc.jpg" alt="Gaming PC">
         <h3>Gaming PC</h3>
         <p>High performance gaming rigs. Custom-built for gamers.</p>
        <button onclick="location.href='gaming-pc.html'">View Details</button>
       </div>
       <div class="product-card">
-        <img src="img/laptop2.png" alt="Professional Laptop">
+        <img src="laptop2.png" alt="Professional Laptop">
         <h3>Professional Laptop</h3>
         <p>High-speed laptops for designers, coders & business pros.</p>
         <button onclick="location.href='professional-laptop.html'">View Details</button>
@@ -90,3 +90,4 @@
   </footer>
 </body>
 </html>
+
