--- a/professional-laptop.html
+++ b/professional-laptop.html
@@ -19,7 +19,7 @@
 <body>
   <header class="main-header">
     <div class="logo-container">
-      <img src="img/logo.jpg" alt="Avni Logo" class="site-logo">
+      <img src="logo.jpg" alt="Avni Logo" class="site-logo">
       <h1>Laptop Solutions</h1>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -41,7 +41,7 @@
   <section class="products">
     <div class="product-gallery">
       <div class="product-card">
-        <img src="img/laptop2.png" alt="Professional Laptop">
+        <img src="laptop2.png" alt="Professional Laptop">
         <h3>WorkPro Elite</h3>
         <ul>
           <li>Intel i5/i7 or Ryzen 5/7</li>
@@ -56,9 +56,9 @@
   <section class="product-gallery-grid">
     <h3>More Angles</h3>
     <div class="gallery-images">
-      <img src="img/pro1.jpg" alt="Professional Laptop Display" />
-      <img src="img/pro2.jpg" alt="Professional Laptop Side" />
-      <img src="img/pro3.jpg" alt="Professional Laptop Office Use" />
+      <img src="pro1.jpg" alt="Professional Laptop Display" />
+      <img src="pro2.jpg" alt="Professional Laptop Side" />
+      <img src="pro3.jpg" alt="Professional Laptop Office Use" />
     </div>
   </section>
   
@@ -83,3 +83,4 @@
 
 </body>
 </html>
+
