--- a/budget-laptop.html
+++ b/budget-laptop.html
@@ -42,7 +42,7 @@
   <section class="products">
     <div class="product-gallery">
       <div class="product-card">
-        <img src="img/laptop1.png" alt="Budget Laptop View 1">
+        <img src="laptop1.png" alt="Budget Laptop View 1">
         <h3>Budget Laptop</h3>
         <ul>
           <li>Intel i3 / Ryzen 3 Processor</li>
@@ -85,4 +85,5 @@
 
 </body>
 </html>
+
 
